--- a/_src/styles/tailwind.css
+++ b/_src/styles/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  :not(pre) td > code[class*=language-] {
+    @apply p-2;
+  }
+}
